 * Added usage count to snippets (Kees Hink)
 * Moved usage count to the sidebar on the edit page (Kees Hink)
 * Explorer menu now reflects customisations to the page listing made via the `construct_explorer_page_queryset` hook and `ModelAdmin.exclude_from_explorer` property (Tim Heap)
 * "Choose another image" button changed to "Change image" to avoid ambiguity (Edd Baldry)
 * Fix: Do not remove stopwords when generating slugs from non-ASCII titles, to avoid issues with incorrect word boundaries (Sævar Öfjörð Magnússon)
 * Fix: The PostgreSQL search backend now preserves ordering of the `QuerySet` when searching with `order_by_relevance=False` (Bertrand Bordage)
 * Fix: Using `modeladmin_register` as a decorator no longer replaces the decorated class with `None` (Tim Heap)
 * Fix: Fixed crash in XML sitemap generator when all pages on the site are private (Stein Strindhaug)
 * Fix: The `{% routablepageurl %}` template tag no longer generates invalid URLs when the `WAGTAIL_APPEND_SLASH` setting was set to `False` (Venelin Stoykov)
 * Fix: The "View live" button is no longer shown if the page doesn't have a routable URL (Tim Heap)


1.13.1 (xx.xx.20xx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~~

 * Fix: API listing views no longer fail when no site records are defined (Karl Hobley)
 * Fix: Fixed crash in XML sitemap generator when all pages on the site are private (Stein Strindhaug)


1.13 (16.10.2017)
~~~~~~~~~~~~~~~~~

 * Front-end cache invalidator now supports purging URLs as a batch (Karl Hobley)
 * Custom document model is now documented (Emily Horsman)
 * Use minified versions of CSS in the admin by adding minification to the front-end tooling (Vincent Audebert, Thibaud Colas)
 * Wagtailforms serve view now passes `request.FILES`, for use in custom form handlers (LB (Ben Johnston))
 * Documents and images are now given new filenames on re-uploading, to avoid old versions being kept in cache (Bertrand Bordage)